force-app/main/default/objects/AH_SFDC_Source_Version__c/AH_SFDC_Source_Version__c.object-meta.xml
<CustomObject>
    <description>Object that stores versions of Apex Classes, Apex Triggers, Visualforce Pages, Visualforce Components</description>
    <label>Salesforce Source Version</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>SFDC Source Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Source Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>