force-app/main/default/objects/AH_SFDC_Source_Version__c/fields/Last_Active__c.field-meta.xml
<CustomField>
    <fullName>Last_Active__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Active</label>
    <type>DateTime</type>
</CustomField>