force-app/main/default/objects/AH_SFDC_Source_Version__c/fields/Salesforce_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Source_Type__c</fullName>
    <formula>TEXT(SFDC_Source_Control__r.Salesforce_Source_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce Source Type</label>
    <type>Text</type>
</CustomField>