force-app/main/default/objects/AH_SFDC_Source_Version__c/fields/SFDC_Source_Control__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Source_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Source Control</label>
    <referenceTo>AH_SFDC_Source_Control__c</referenceTo>
    <relationshipLabel>Salesforce Source Versions</relationshipLabel>
    <relationshipName>Salesforce_Source_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>