force-app/main/default/objects/AH_SFDC_Source_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Salesforce_Source_Type__c</columns>
    <columns>API_Name__c</columns>
    <columns>SFDC_Source_Control__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>