force-app/main/default/objects/AH_SFDC_Source_Version__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Salesforce_Source_Type__c</columns>
    <columns>SFDC_Source_Control__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>